fix: default align left

--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -190,6 +190,7 @@
 
 	table {
 		display: block;
+		text-align: left;
 		width: 100%;
 		overflow: auto;
 		margin: 20px 0;
